# inf148160_PSIW

./: PROTOCOL  README
Client/: CMakeLists.txt  main.c
Client/types/: types.h
Client/utils/: utils.c  utils.h
Server/: CMakeLists.txt  main.c  main.h
Server/endpoints/client/: client.c  client.h
Server/endpoints/public/: public.c  public.h
Server/endpoints/server/: server.c  server.h
Server/service/: service.c  service.h
Server/types/: types.h
Server/utils/: utils.c  utils.h
